--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="mainContent" class="container" style="display: none;">
         <!-- Animated Text Section -->
         <div id="animatedText" class="animated-text" style="display:block;">
-            <p>Sum Up of Amounts Transffered To CHENCHU KRISHNAIAH !</p>
+            <p>💰💰Sum Up of Amounts Transffered To CHENCHU KRISHNAIAH!</p>
         </div>
         <h1>Amount Adder</h1>
         <input type="number" id="amountInput" placeholder="Enter an amount" onkeypress="checkEnter(event)" />
