--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         <h2>Person2:Sundeep</h2>
         <p>Phone:9642456691</p>
         <p>Email:sundeep@gmail.com</p>
-        <p>Venkatagiri</p>
+        <p>Address:Venkatagiri</p>
     </div>
 </body>
 </html>
